# zstd-kmp

./: .gitignore  CHANGELOG.md  GOVERNANCE.md  README.md  RELEASING.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: renovate.json5
.github/workflows/: build.yaml  gradle-wrapper.yaml  release.yaml
gradle/: libs.versions.toml
okio-zstd/: build.gradle.kts  build.zig
okio-zstd/native/: OkioZstd.cpp
okio-zstd/src/androidMain/: CMakeLists.txt
okio-zstd/src/androidMain/kotlin/okio/zstd/: AndroidZstd.kt
okio-zstd/src/commonMain/kotlin/okio/zstd/: Zstd.kt  ZstdCompressSink.kt  ZstdCompressor.kt  ZstdDecompressSource.kt  ZstdDecompressor.kt
okio-zstd/src/commonTest/kotlin/okio/zstd/: ZstdTest.kt  ZstdTesting.kt
okio-zstd/src/jniMain/kotlin/okio/zstd/: JniZstdCompressor.kt
okio-zstd/src/jvmMain/: CMakeLists.txt  build-linux.sh  build-mac.sh
okio-zstd/src/jvmMain/kotlin/okio/zstd/: JniZstd.kt  JniZstdDecompressor.kt  JvmZstd.kt
okio-zstd/src/jvmTest/kotlin/okio/zstd/: JniZstdDecompressSourceTest.kt  JniZstdTesting.kt  LubenZstdJniInteropTest.kt  ZstdCompressSinkTest.kt  ZstdDecompressSourceTest.kt  ZstdTest.kt  ZstdTesting.kt
okio-zstd/src/nativeMain/kotlin/okio/zstd/: NativeZstdCompressor.kt  NativeZstdDecompressor.kt
okio-zstd/src/nativeTest/kotlin/okio/zstd/: NativeZstdTesting.kt
zstd-kmp/: build.gradle.kts  build.zig
zstd-kmp-okio/: build.gradle.kts
zstd-kmp-okio/api/jvm/: zstd-kmp-okio.api
zstd-kmp/api/android/: zstd-kmp.api
zstd-kmp/api/jvm/: zstd-kmp.api
zstd-kmp/native/: OkioZstd.cpp  ZstdKmp.cpp
zstd-kmp/src/androidMain/: CMakeLists.txt  consumer-rules.pro
zstd-kmp/src/androidMain/kotlin/com/squareup/zstd/: AndroidZstd.kt
zstd-kmp/src/androidMain/kotlin/okio/zstd/: AndroidZstd.kt
zstd-kmp/src/commonMain/kotlin/okio/zstd/: ZstdCompressSink.kt  ZstdCompressor.kt  ZstdDecompressSource.kt  ZstdDecompressor.kt
zstd-kmp/src/commonTest/kotlin/okio/zstd/: ZstdCompressSinkTest.kt  ZstdDecompressSourceTest.kt
zstd-kmp/src/jniMain/kotlin/okio/zstd/: JniZstd.kt  JniZstdCompressor.kt  JniZstdDecompressor.kt
zstd-kmp/src/jniTest/kotlin/okio/zstd/: JniZstdCompressSinkTest.kt  LubenZstdJniInteropTest.kt
zstd-kmp/src/jvmMain/: CMakeLists.txt  build-linux.sh  build-mac.sh
zstd-kmp/src/jvmMain/kotlin/com/squareup/zstd/: JvmZstd.kt
zstd-kmp/src/jvmMain/kotlin/okio/zstd/: JvmZstd.kt
(+34 files in other folders)
